--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "types": "dist/index.d.ts",
   "since": 2022,
   "scripts": {
+    "vite:dev": "cd demo && vite",
+    "vite:build": "cd demo && vite build",
+    "vite:preview": "cd demo && vite preview",
     "build": "tsup src/index.ts",
     "lint": "eslint --ignore-path .gitignore --ext .ts .",
     "lint:fix": "eslint --ignore-path .gitignore --ext .ts . --fix"
